# match-day

./: .env.local  .gitignore
scorepact-api/: .env.example  .gitignore  pyproject.toml
scorepact-api/alembic/: env.py
scorepact-api/alembic/versions/: 92754d8db66b_initial_schema.py
scorepact-api/app/: config.py  db.py  main.py
scorepact-api/app/auth/: clerk.py
scorepact-api/app/models/: __init__.py  match.py  pool.py  prediction.py  user.py
scorepact-api/app/routes/: health.py  me.py  pools.py
scorepact-api/app/schemas/: pool.py
scorepact-api/app/utils/: slug.py
scorepact-web/: .env  index.html  package.json
scorepact-web/src/: App.tsx  index.css  main.tsx  router.tsx
scorepact-web/src/components/: Field.tsx  FixtureCard.tsx  Logo.tsx  StandingsBoard.tsx  states.tsx
scorepact-web/src/components/landing/: Footer.tsx  Hero.tsx  HowItWorks.tsx  Nav.tsx  PredictDemo.tsx  Rivalry.tsx
scorepact-web/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Container.tsx
scorepact-web/src/hooks/: useApi.ts
scorepact-web/src/lib/: auth.tsx  cn.ts  leagues.ts  scoring.ts  store.tsx  theme.ts  world.ts
scorepact-web/src/pages/: CreatePool.tsx  Landing.tsx  Pools.tsx  Predict.tsx  SignIn.tsx  SignUp.tsx
scorepact-web/src/routes/app/: AppShell.tsx  CreatePool.tsx  Predict.tsx  Table.tsx
scorepact-web/src/routes/auth/: Authlayout.tsx  Login.tsx  Register.tsx
scorepact-web/src/routes/landing/: Landing.tsx  LivePoolCard.tsx  Marquee.tsx  PredictDemo.tsx
supabase/migrations/: 0001_init.sql
